crates/koruma-derive/src/snapshots/koruma_derive__expand__tests__koruma_expansion_each_multiple_validators.snap
---
source: crates/koruma-derive/src/expand.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
pub enum OrderValuesValidator {
    RangeValidation(RangeValidation),
    EvenValidation(EvenValidation),
}
#[derive(Clone, Debug)]
pub struct OrderValuesError {
    range_validation: Option<RangeValidation>,
    even_validation: Option<EvenValidation>,
}
impl OrderValuesError {
    pub fn range_validation(&self) -> Option<&RangeValidation> {
        self.range_validation.as_ref()
    }
    pub fn even_validation(&self) -> Option<&EvenValidation> {
        self.even_validation.as_ref()
    }
    /// Returns all failed validators for this field.
    pub fn all(&self) -> Vec<OrderValuesValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.range_validation {
            result.push(OrderValuesValidator::RangeValidation(v.clone()));
        }
        if let Some(v) = &self.even_validation {
            result.push(OrderValuesValidator::EvenValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.range_validation.is_none() && self.even_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct OrderValidationError {
    values: Vec<(usize, OrderValuesError)>,
}
impl OrderValidationError {
    /// Returns all validation errors for this collection field, with their indices.
    pub fn values(&self) -> &[(usize, OrderValuesError)] {
        &self.values
    }
}
impl koruma::ValidationError for OrderValidationError {
    fn is_empty(&self) -> bool {
        self.values.is_empty()
    }
}
impl Order {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), OrderValidationError> {
        let mut error = OrderValidationError {
            values: Vec::new(),
        };
        let mut has_error = false;
        for (idx, __item_value) in self.values.iter().enumerate() {
            let mut element_error = OrderValuesError {
                range_validation: None,
                even_validation: None,
            };
            let mut element_has_error = false;
            let validator = RangeValidation::builder()
                .min(0)
                .max(100)
                .with_value(__item_value.clone())
                .build();
            if validator.validate(__item_value).is_err() {
                element_error.range_validation = Some(validator);
                element_has_error = true;
            }
            let validator = EvenValidation::builder()
                .with_value(__item_value.clone())
                .build();
            if validator.validate(__item_value).is_err() {
                element_error.even_validation = Some(validator);
                element_has_error = true;
            }
            if element_has_error {
                error.values.push((idx, element_error));
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
