crates/koruma-derive/src/snapshots/koruma_derive__expand__tests__koruma_expansion_multiple_fields.snap
---
source: crates/koruma-derive/src/expand.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
pub enum ItemAgeValidator {
    NumberRangeValidation(NumberRangeValidation),
}
#[derive(Clone, Debug)]
pub struct ItemAgeError {
    number_range_validation: Option<NumberRangeValidation>,
}
impl ItemAgeError {
    pub fn number_range_validation(&self) -> Option<&NumberRangeValidation> {
        self.number_range_validation.as_ref()
    }
    /// Returns all failed validators for this field.
    pub fn all(&self) -> Vec<ItemAgeValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.number_range_validation {
            result.push(ItemAgeValidator::NumberRangeValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.number_range_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
pub enum ItemNameValidator {
    StringLengthValidation(StringLengthValidation),
}
#[derive(Clone, Debug)]
pub struct ItemNameError {
    string_length_validation: Option<StringLengthValidation>,
}
impl ItemNameError {
    pub fn string_length_validation(&self) -> Option<&StringLengthValidation> {
        self.string_length_validation.as_ref()
    }
    /// Returns all failed validators for this field.
    pub fn all(&self) -> Vec<ItemNameValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.string_length_validation {
            result.push(ItemNameValidator::StringLengthValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.string_length_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct ItemValidationError {
    age: ItemAgeError,
    name: ItemNameError,
}
impl ItemValidationError {
    pub fn age(&self) -> &ItemAgeError {
        &self.age
    }
    pub fn name(&self) -> &ItemNameError {
        &self.name
    }
}
impl koruma::ValidationError for ItemValidationError {
    fn is_empty(&self) -> bool {
        self.age.is_empty() && self.name.is_empty()
    }
}
impl Item {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), ItemValidationError> {
        let mut error = ItemValidationError {
            age: ItemAgeError {
                number_range_validation: None,
            },
            name: ItemNameError {
                string_length_validation: None,
            },
        };
        let mut has_error = false;
        let __value = &self.age;
        let validator = NumberRangeValidation::builder()
            .min(0)
            .max(100)
            .with_value(__value.clone())
            .build();
        if validator.validate(__value).is_err() {
            error.age.number_range_validation = Some(validator);
            has_error = true;
        }
        let __value = &self.name;
        let validator = StringLengthValidation::builder()
            .min(1)
            .max(67)
            .with_value(__value.clone())
            .build();
        if validator.validate(__value).is_err() {
            error.name.string_length_validation = Some(validator);
            has_error = true;
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
