crates/koruma-derive/src/snapshots/koruma_derive__expand__tests__koruma_expansion_multiple_validators.snap
---
source: crates/koruma-derive/src/expand.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
pub enum MultiValidatorItemValueValidator {
    NumberRangeValidation(NumberRangeValidation),
    EvenNumberValidation(EvenNumberValidation),
}
#[derive(Clone, Debug)]
pub struct MultiValidatorItemValueError {
    number_range_validation: Option<NumberRangeValidation>,
    even_number_validation: Option<EvenNumberValidation>,
}
impl MultiValidatorItemValueError {
    pub fn number_range_validation(&self) -> Option<&NumberRangeValidation> {
        self.number_range_validation.as_ref()
    }
    pub fn even_number_validation(&self) -> Option<&EvenNumberValidation> {
        self.even_number_validation.as_ref()
    }
    /// Returns all failed validators for this field.
    pub fn all(&self) -> Vec<MultiValidatorItemValueValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.number_range_validation {
            result
                .push(
                    MultiValidatorItemValueValidator::NumberRangeValidation(v.clone()),
                );
        }
        if let Some(v) = &self.even_number_validation {
            result
                .push(MultiValidatorItemValueValidator::EvenNumberValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.number_range_validation.is_none() && self.even_number_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct MultiValidatorItemValidationError {
    value: MultiValidatorItemValueError,
}
impl MultiValidatorItemValidationError {
    pub fn value(&self) -> &MultiValidatorItemValueError {
        &self.value
    }
}
impl koruma::ValidationError for MultiValidatorItemValidationError {
    fn is_empty(&self) -> bool {
        self.value.is_empty()
    }
}
impl MultiValidatorItem {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), MultiValidatorItemValidationError> {
        let mut error = MultiValidatorItemValidationError {
            value: MultiValidatorItemValueError {
                number_range_validation: None,
                even_number_validation: None,
            },
        };
        let mut has_error = false;
        let __value = &self.value;
        let validator = NumberRangeValidation::builder()
            .min(0)
            .max(100)
            .with_value(__value.clone())
            .build();
        if validator.validate(__value).is_err() {
            error.value.number_range_validation = Some(validator);
            has_error = true;
        }
        let validator = EvenNumberValidation::builder()
            .with_value(__value.clone())
            .build();
        if validator.validate(__value).is_err() {
            error.value.even_number_validation = Some(validator);
            has_error = true;
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
