crates/koruma-derive/src/snapshots/koruma_derive__expand__tests__koruma_expansion_optional_with_generic.snap
---
source: crates/koruma-derive/src/expand.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
pub enum ItemScoreValidator {
    GenericRange(GenericRange<i32>),
}
#[derive(Clone, Debug)]
pub struct ItemScoreError {
    generic_range: Option<GenericRange<i32>>,
}
impl ItemScoreError {
    pub fn generic_range(&self) -> Option<&GenericRange<i32>> {
        self.generic_range.as_ref()
    }
    /// Returns all failed validators for this field.
    pub fn all(&self) -> Vec<ItemScoreValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.generic_range {
            result.push(ItemScoreValidator::GenericRange(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.generic_range.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct ItemValidationError {
    score: ItemScoreError,
}
impl ItemValidationError {
    pub fn score(&self) -> &ItemScoreError {
        &self.score
    }
}
impl koruma::ValidationError for ItemValidationError {
    fn is_empty(&self) -> bool {
        self.score.is_empty()
    }
}
impl Item {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), ItemValidationError> {
        let mut error = ItemValidationError {
            score: ItemScoreError {
                generic_range: None,
            },
        };
        let mut has_error = false;
        if let Some(ref __value) = self.score {
            fn __koruma_assert_validate_score_generic_range<V: koruma::Validate<T>, T>(
                v: &V,
                t: &T,
            ) -> Result<(), ()> {
                v.validate(t)
            }
            let validator = GenericRange::<i32>::builder()
                .min(0)
                .max(100)
                .with_value(__value.clone())
                .build();
            if __koruma_assert_validate_score_generic_range(&validator, __value).is_err()
            {
                error.score.generic_range = Some(validator);
                has_error = true;
            }
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
