crates/koruma-derive/src/snapshots/koruma_derive__expand__tests__koruma_expansion_validator_no_args.snap
---
source: crates/koruma-derive/src/expand.rs
expression: pretty_print(expanded)
---
/// Enum of all possible validators for this field.
#[derive(Clone, Debug)]
pub enum ItemValueValidator {
    EvenNumberValidation(EvenNumberValidation),
}
#[derive(Clone, Debug)]
pub struct ItemValueError {
    even_number_validation: Option<EvenNumberValidation>,
}
impl ItemValueError {
    pub fn even_number_validation(&self) -> Option<&EvenNumberValidation> {
        self.even_number_validation.as_ref()
    }
    /// Returns all failed validators for this field.
    pub fn all(&self) -> Vec<ItemValueValidator> {
        let mut result = Vec::new();
        if let Some(v) = &self.even_number_validation {
            result.push(ItemValueValidator::EvenNumberValidation(v.clone()));
        }
        result
    }
    pub fn is_empty(&self) -> bool {
        self.even_number_validation.is_none()
    }
    pub fn has_errors(&self) -> bool {
        !self.is_empty()
    }
}
/// Auto-generated validation error struct for [`#struct_name`].
///
/// Each field contains a nested error struct with `Option<Validator>` for each
/// validator. Access errors via chained calls like `error.field().validator()`.
#[derive(Clone, Debug)]
pub struct ItemValidationError {
    value: ItemValueError,
}
impl ItemValidationError {
    pub fn value(&self) -> &ItemValueError {
        &self.value
    }
}
impl koruma::ValidationError for ItemValidationError {
    fn is_empty(&self) -> bool {
        self.value.is_empty()
    }
}
impl Item {
    /// Validates all fields and returns an error struct containing
    /// all validation failures.
    ///
    /// Returns `Ok(())` if all validations pass, or `Err(error)` where
    /// `error` contains the validation failures for each field.
    pub fn validate(&self) -> Result<(), ItemValidationError> {
        let mut error = ItemValidationError {
            value: ItemValueError {
                even_number_validation: None,
            },
        };
        let mut has_error = false;
        let __value = &self.value;
        let validator = EvenNumberValidation::builder()
            .with_value(__value.clone())
            .build();
        if validator.validate(__value).is_err() {
            error.value.even_number_validation = Some(validator);
            has_error = true;
        }
        if has_error { Err(error) } else { Ok(()) }
    }
}
