crates/koruma-derive/src/snapshots/koruma_derive__expand__tests__validator_expansion_generic.snap
---
source: crates/koruma-derive/src/expand.rs
expression: pretty_print(expanded)
---
#[derive(koruma::bon::Builder)]
#[derive(Clone, Debug)]
pub struct GenericRangeValidation<T> {
    pub min: T,
    pub max: T,
    pub actual: Option<T>,
}
impl<T, S: generic_range_validation_builder::State> GenericRangeValidationBuilder<T, S>
where
    S::Actual: koruma::bon::IsUnset,
{
    /// Sets the value field. This is auto-generated by `#[koruma::validator]`.
    pub fn with_value(
        self,
        value: T,
    ) -> GenericRangeValidationBuilder<
        T,
        generic_range_validation_builder::SetActual<S>,
    > {
        self.actual(value)
    }
}
/// Auto-generated macro for implementing `Validate` for multiple types.
///
/// # Example
/// ```ignore
/// #macro_name!(i32, i64, u32, u64);
/// ```
#[macro_export]
macro_rules! impl_generic_range_validation {
    ($($t:ty),+ $(,)?) => {
        $(impl koruma::Validate < $t > for GenericRangeValidation < $t > where $t :
        PartialOrd + Clone, { fn validate(& self, value : & $t) -> Result < (), () > { if
        * value < self.min || * value > self.max { Err(()) } else { Ok(()) } } })+
    };
}
